--- a/slot.html
+++ b/slot.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
-    <link rel="amphtml" href="https://jendralsmaya.online/amp/demo-slot/">
+    <link rel="amphtml" href="https://telkomedika.co.id/produk/demo/">
     <link rel="canonical" href="https://telkomedika.co.id/produk/demo/">
     <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
     <meta name="google-site-verification" content="TdSj222RmPAketM-RsCOUoJzbibBUpLEynSdezdg8jI" />
